--- a/[EDD]Practica1/[EDD]Practica1.csproj
+++ b/[EDD]Practica1/[EDD]Practica1.csproj
@@ -57,6 +57,12 @@
     <Compile Include="Dashboard.Designer.cs">
       <DependentUpon>Dashboard.cs</DependentUpon>
     </Compile>
+    <Compile Include="EnviarMensaje.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EnviarMensaje.Designer.cs">
+      <DependentUpon>EnviarMensaje.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,6 +82,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Dashboard.resx">
       <DependentUpon>Dashboard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EnviarMensaje.resx">
+      <DependentUpon>EnviarMensaje.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
